# BakkesPlugin-AudioTouchpadSkip

./: .env.cmake  .gitignore  AudioTouchpadSkip.sln  CMakeLists.txt  GamepadTouchpadHandle.sln  README.md  build.bat  compile-commands.bat  log.txt  release.bat
AudioTouchpadSkip/: AudioTouchpadSkip.cpp  AudioTouchpadSkip.h  AudioTouchpadSkip.rc  AudioTouchpadSkip.vcxproj  AudioTouchpadSkip.vcxproj.filters  GuiBase.cpp  GuiBase.h  pch.h
AudioTouchpadSkip/Gamepad/: Gamepad.cpp  Gamepad.hpp
GamepadTouchpadHandle/: GamepadTouchpadHandle.cpp  GamepadTouchpadHandle.h  GamepadTouchpadHandle.rc  GamepadTouchpadHandle.vcxproj  GamepadTouchpadHandle.vcxproj.filters  GuiBase.cpp  GuiBase.h
GamepadTouchpadHandle/Gamepad/: Gamepad.cpp  Gamepad.hpp
src/: Gamepad.cpp  Gamepad.hpp  main.cpp
